Adding the wsgi gunicorn to deploy the flask application

--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,11 @@
-FROM python:3.6
-ADD . /app
+FROM python:3.6 
+RUN mkdir /app
 WORKDIR /app
+ADD requirements.txt /app
 RUN pip install -r requirements.txt
+RUN python -m nltk.downloader stopwords
+RUN python -m nltk.downloader punkt
+
+ADD . /app
+RUN chmod +x ./entrypoint.sh
+EXPOSE 5000
